# pypolyclip

./: .bandit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.rst  CITATION.cff  LICENSE  LICENSE.rst  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: check_changelog.yml  check_milestone.yml  ci_cron_daily.yml  ci_cron_weekly.yml  ci_test_predeps.yml  ci_tests.yml  ci_workflows.yml  publish.yml
pypolyclip/: __init__.py  _version.py  pypolyclip.py
pypolyclip/include/: polyclip.h
pypolyclip/src/: _polyclip.c  polyclip.c
pypolyclip/tests/: README.md  test_pypolyclip.py
test/: test_pypolyclip.py
