[project]
name = 'pypolyclip'
description = 'A python driver to the polyclip functions'
readme = 'README.md'
license = {file = 'LICENSE.rst'}
authors = [
    {name = 'Pypolyclip Developers', email = 'help@stsci.edu'}
]
keywords = [
    'computational geometry',
    'polygon clipping',
    'polygon intersection',
    'pixelated images',
    'CUBISM',
    'polyclip',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dynamic = ['version']
requires-python = '>=3.9'
dependencies = ['numpy>=1.22.3']

[project.urls]
Homepage = 'https://github.com/spacetelescope/pypolyclip'

[project.optional-dependencies]
test = [
    'pytest-astropy>=0.10',
    'matplotlib',
]

[build-system]
requires = [
    'setuptools>=61.2',
    'setuptools_scm>=6.2',
    'numpy',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = 'pypolyclip/version.py'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
minversion = 7.0
testpaths = [
    'pypolyclip',
]
addopts = '--color=yes'
xfail_strict = true
remote_data_strict = true
filterwarnings = [
    'error',
    # python 3.12 deprecation in dateutil (called from matplotlib)
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
]

[tool.coverage.run]
omit = [
    'pypolyclip/tests/*',
    'pypolyclip/*/tests/*',
    'pypolyclip/version*',
    '*/pypolyclip/tests/*',
    '*/pypolyclip/*/tests/*',
    '*/pypolyclip/version*',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'except ImportError',
    'raise AssertionError',
    'raise NotImplementedError',
    'def main\\(.*\\):',
    'pragma: py{ignore_python_version}',
    'def _ipython_key_completions_',
]

[tool.isort]
skip_glob = [
    'pypolyclip/*__init__.py*',
]
known_first_party = [
    'pypolyclip',
]
use_parentheses = true

[tool.black]
force-exclude = """
(
  .*
)
"""

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
