[metadata]
author = Russell Ryan and JD Smith
author_email = rryan@stsci.edu
long_description = The polyclip functions were originally developed by JD Smith for the CUBISM project (Smith et al. 2007, PASP, 119, 1133 -- https://ui.adsabs.harvard.edu/abs/2007PASP..119.1133S/)
license = BSD-3 License
keywords = computational geometry, polygon clipping, polygon intersection, pixelated images, CUBISM, polyclip
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >=3.7
packages = find:
install_requires =
  numpy>=1.22.3
