[metadata]
name = pypolyclip
author = Russell Ryan and JD Smith
author_email = rryan@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
description = A python driver to the polyclip functions
long_description = The polyclip functions were originally developed by JD Smith for the CUBISM project (Smith et al. 2007, PASP, 119, 1133 -- https://ui.adsabs.harvard.edu/abs/2007PASP..119.1133S/)
long_description_content_type = text/markdown
keywords = computational geometry, polygon clipping, polygon intersection, pixelated images, CUBISM, polyclip
classifiers =
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
  numpy>=1.22.3

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-tornasync
    matplotlib
