[metadata]
name = pypolyclip
author = Russell Ryan and J.D. Smith
author_email = rryan@stsci.edu
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/spacetelescope/pypolyclip
github_project = spacetelescope/pypolyclip
edit_on_github = False
description = A python driver to the polyclip functions
long_description = file: README.md
long_description_content_type = text/markdown
keywords = computational geometry, polygon clipping, polygon intersection, pixelated images, CUBISM, polyclip
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
  numpy>=1.22.3

[options.extras_require]
test =
    pytest
    pytest-astropy
    matplotlib

[flake8]
max-line-length = 100

[coverage:run]
omit =
    pypolyclip/tests/*
    pypolyclip/*/tests/*
    pypolyclip/version*
    */pypolyclip/tests/*
    */pypolyclip/*/tests/*
    */pypolyclip/version*
